Suppress Autocomplete when user already typed unique suggestion.

E.g. user has suggestion "Bobby", and user types "Bobby", then we shouldn't show the unique and
equal (case-sensitive) suggestion.

Keep the prefix used to get suggestions in the new QueryHandler data structure. That
way, we can associate returned values with the request's context, and filter accordingly.

Added unit tests and tested manually in Chromium desktop.

Bug: 911146
Change-Id: I1c2c69faee7051944348216fe6a3d0405d1ce357
Reviewed-on: https://chromium-review.googlesource.com/c/1377388
Commit-Queue: Sebastien Lalancette <seblalancette@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617543}
Former-commit-id: 850260abb34a6f53f3ca23a8e0f460249b9c80d6